--- a/devices/b150m/sway/.config/.config/waybar/config
+++ b/devices/b150m/sway/.config/.config/waybar/config
@@ -1,5 +1,5 @@
 {
-    // "layer": "top", // Waybar at top layer
+    "layer": "top", // Waybar at top layer
     "position": "bottom", // Waybar position (top|bottom|left|right)
     "height": 30, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
@@ -7,7 +7,7 @@
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode", "sway/scratchpad", "custom/media"],
     "modules-center": ["sway/window"],
-    "modules-right": ["mpd", "idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "keyboard-state", "sway/language", "battery", "battery#bat2", "clock", "tray"],
+    "modules-right": ["idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "keyboard-state", "sway/language", "battery", "battery#bat2", "clock", "tray"],
     // Modules configuration
     // "sway/workspaces": {
         // "disable-scroll": true,
@@ -25,9 +25,8 @@
         // }
     // },
     "sway/window" : {
-        "format": "{title}",
-        "on-scroll-up": "swaymsg workspace next",
-        "on-scroll-down": "swaymsg workspace prev",
+        "format": "{app_id}: {title}",
+        "on-scroll-up": "{}",
         "icon": true
     },
     "keyboard-state": {
@@ -92,11 +91,11 @@
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
-        "format": "{load} ",
+        "format": "{usage}% ",
         "tooltip": false
     },
     "memory": {
-        "format": "{used}/{total}GiB "
+        "format": "{}% "
     },
     "temperature": {
         // "thermal-zone": 2,
