--- a/devices/ubuntu-server/tmux/.tmux.conf
+++ b/devices/ubuntu-server/tmux/.tmux.conf
@@ -6,7 +6,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'wfxr/tmux-power'
+
+set -g @plugin "janoamaral/tokyo-night-tmux"
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
