commit from server

--- a/devices/ubuntu-server/tmux/.tmux.conf
+++ b/devices/ubuntu-server/tmux/.tmux.conf
@@ -7,8 +7,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @plugin "janoamaral/tokyo-night-tmux"
-
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
