--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,9 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+# unbind C-b
+# set -g prefix C-Space
+# bind C-Space send-prefix
 
 set -g @tmux_power_theme 'moon'
 
