--- a/devices/mac/alacritty/alacritty.yml
+++ b/devices/mac/alacritty/alacritty.yml
@@ -112,10 +112,10 @@
 font:
   size: 18.0
   normal:
-    family: Monaco for Powerline
     # family: TerminessTTF Nerd Font Mono
+    # family: Monaco for Powerline 
     # family: Iosevka Nerd Font Mono
-    # style: Bold
+    style: Bold
     # style: Regular
   # bold:
     # family: Iosevka Nerd Font Mono
@@ -125,9 +125,9 @@ font:
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
-  offset:
-   x: 1
-   y: 0
+  #offset:
+  #  x: 0
+  #  y: 0
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the
