--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,5 @@
+set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
+
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
@@ -13,11 +15,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'wfxr/tmux-power'
-
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 
 # bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 setw -g mode-keys vi
@@ -36,3 +33,6 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 bind C-l send-keys 'C-l'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
