update from mac

--- a/devices/mac/alacritty/.config/alacritty/alacritty.toml
+++ b/devices/mac/alacritty/.config/alacritty/alacritty.toml
@@ -30,6 +30,12 @@ key = "Right"
 mode = "AppCursor"
 mods = "Command"
 
+[[keyboard.bindings]]
+chars = "\u001BOF"
+key = "Right"
+mode = "AppCursor"
+mods = "Command"
+
 [selection]
 save_to_clipboard = true
 
