--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -11,6 +11,7 @@
   "vim_mode": true,
   "theme": "macOS Classic Light",
   "format_on_save": "on",
+  "autosave": "on_focus_change",
   "always_treat_brackets_as_autoclosed": true,
   "enable_language_server": true,
   "auto_update": true,
@@ -19,6 +20,10 @@
   "relative_line_numbers": true,
   "vim": {
     "use_system_clipboard": "always",
-    "use_multiline_find": true
+    "use_multiline_find": true,
+    "use_smartcase_find": true
+  },
+  "file_types": {
+    "html": ["vto"]
   }
 }
